[tool.poetry]
name = "poetryghedependencysample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.3"
platform-tools = {git = "https://github-partner.azc.ext.com/jithesh/platform-tools", tag = "v0.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
